[gd_scene load_steps=4 format=3 uid="uid://dsuhxnhukwvd"]

[ext_resource type="Script" uid="uid://ccoco6yx2vht0" path="res://components/upgrade_scenes/upgrade_card.gd" id="1_68qdy"]
[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="2_2byyh"]
[ext_resource type="Texture2D" uid="uid://b8piqndlfnolp" path="res://assets/early_bird/wojak_bird_1.png" id="3_m1epy"]

[node name="UpgradeCard" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -7.5
offset_right = 65.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("2_2byyh")
script = ExtResource("1_68qdy")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "upgrade name label"

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_m1epy")
stretch_mode = 5

[connection signal="clicked" from="." to="." method="_on_clicked"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
